--- a/sass/scss/style.css
+++ b/sass/scss/style.css
@@ -1,16 +1,1 @@
-.rule {
-  color: coral;
-}
-
-.rule a {
-  color: greenyellow;
-}
-
-.rule a span {
-  color: palevioletred;
-}
-
-.rule a h1 {
-  color: crimson;
-}
-/*# sourceMappingURL=style.css.map */
+/* No CSS *//*# sourceMappingURL=style.css.map */
