--- a/sass/scss/style.css
+++ b/sass/scss/style.css
@@ -1,4 +1,9 @@
 #main-nav {
   background: #032f3e;
 }
+
+section h1 {
+  font-size: 24px;
+  color: #032f3e;
+}
 /*# sourceMappingURL=style.css.map */
