--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -1,6 +1,11 @@
 //
 $deepBlue: #032f3e;
-
+$sectionHeading: 24px;
 #main-nav{
     background: $deepBlue;
+}
+section h1{
+    font-size: $sectionHeading; 
+    color: $deepBlue;
+
 }
