--- a/sass/scss/style.scss
+++ b/sass/scss/style.scss
@@ -4,7 +4,7 @@ $sectionHeading: 24px;
 #main-nav{
     background: $deepBlue;
 }
-// section h1{
-//     font-size: $sectionHeading; 
-//     color: $deepBlue;
-// }
+section h1{
+    font-size: $sectionHeading; 
+    color: $deepBlue;
+}
